fixed dark mode to not manipulate DOM directly

--- a/lightide/src/index.css
+++ b/lightide/src/index.css
@@ -12,15 +12,6 @@ body.dark {
   color: white;
 }
 
-span.dark {
-  color: yellow;
-}
-span.dark:hover {
-  background-color: blue;
-}
-span.dark:active {
-  background-color: yellowgreen;
-}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
